// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package types;

import "ledger_info.proto";

// This is used to prove epoch changes.
message EpochChangeProof {
  // A list of LedgerInfos with contiguous increasing epoch numbers.
  repeated LedgerInfoWithSignatures ledger_info_with_sigs = 1;

  // A flag (when true) that indicates the above list is incomplete and only
  // contains the first N epoch changes.
  bool more = 2;
}
